# snippet

./: .gitallowed  .gitattributes  .gitignore  .gitmodules  AGENTS.md  MEMO.md  README.md  ai-report  aider-labs  apple-podcast-rss  blank  build.gradle  caption-log  caption-summary  chrome  cmder.md  epoch  gemini-keys.template  gen_data.sh  git-amend  github  jira-summary  jq-schema  json-schema  kt-review  live-caption-log  main.py  markmap-cli  meeting-ask  meeting-markmap  meeting-summary  meeting-tone  mindmap  mindmap-zh  miniperplx  ms-edge  portable-dev-pack.cmd  readmoo-audio  readmoo-epub  readmoo-epub-update  (+17 more)
.devcontainer/: devcontainer.json
azure-blob-sdk/: build.gradle  settings.gradle  storagekeys.example
bash/: HackerRank.md  bash.md  epoch.md  export-linkedin-saved-posts.md  export-linkedin-saved-posts.sh
c#/: README.md
csv-hashmap/: Makefile
csv_hashmap/: Makefile  build.gradle  settings.gradle
doc/: DEVELOP.md
docker/: windows-docker.md
docker-selenium-audio-recording/: record-youtube-example.js
dotnet/: README.md
git-stats/: README.md
go/: CLEAN_CODE.md  ROADMAP.md  go.md
hadoop-azure-blob/: build.gradle  settings.gradle
hadoop-azure-table/: build.gradle  settings.gradle
hashmap-sqlite/: Makefile  build.gradle
java/: DateTimeFormatter.md
java-sqlite/: Makefile  build.gradle
js/: timeline.md
kafka-producer/: .gitignore  build.gradle
liquibase-scala/: README.md  build.sbt  docker-compose.yml
markdown/: AWS_SSA_NYC_Taxi.drawio  google-map-api.md
mbox-analyzer/: PST_Support.md  date_freq.sh  mbox-subject.py  office365-support.md  top20_sender.sh  top_sender.sh  top_sender_filter.sh
md/: 2023-08-31_AI_Coding_Assistans.md  2023-08-31_AI_Coding_Assistants.html  2023-08-31_AI_Coding_Assistants.md  ai-code-assistants.md  git-extras.md  git-files.md  gitconfig.md  github-cli.md  koodo-reader.md  linux-server-security.md  mermaid.md  prompt-response-template.md  virtual-display-adapter.md
mitaketw_sms/: .gitignore  build.gradle  settings.gradle
nightwatch.js/: Makefile  README.md  nightwatch.json  package.json  setup.sh
ps/: commandlet.md  ical-import.md  keep-cloud-pc-alive.md
py/: create-notebook.py
py/markdownify/curl-to-md/: curl-to-md.md  pyproject.toml
py/markdownify/curl-to-md/src/: curl2md.py
py/requests/cloudskillsboost/: pyproject.toml
py/requests/cloudskillsboost/doc/: cloudskillsboost-dump.md
py/requests/cloudskillsboost/src/: dump_transcript.py
py/requests/readmoo/: pyproject.toml  readmoo.md
py/tiktoken/: pyproject.toml  tiktoken.md  token_count_openai.py
py/uv/hello-tool/: pyproject.toml
revealjs-slides/: 2019-09-02_Virtical_Integration_in_Healthcare.md  2019-09-09_DataConTW_2019.html
revealjs_slides/: 2019-09-02_Virtical_Integration_in_Healthcare.html  2019-09-02_Virtical_Integration_in_Healthcare.md
ruten-crawler/: Makefile  settings.gradle
show-mbox/: show_mbox_company.py  show_mbox_html.py  (+2 more)
(+1540 files in other folders)
