[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudskillsboost-dump"
version = "0.1.0"
license = "Apache-2.0"
authors = [
  { name="Jazz Wang", email="jazz.wang@example.com" },
]
description = "Fetch Readmoo book category, price, rating info"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "google-generativeai",
    "bs4",
    "dotenv"
]

[project.scripts]
cloudskillsboost-dump = "dump_transcript:main"
